Update link to 'Between Nothing and Space' page

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -998,7 +998,7 @@
            ========================================= -->
       <article class="card">
         <div class="left">
-          <a class="book-link" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf" target="_blank" rel="noopener">
+          <a class="book-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
                  src="/reflections/pages/between-nothing-and-space/noting-space.png"
                  alt="Between Nothing and Space cover"
