Refactor audio section for better functionality

--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -264,19 +264,34 @@
       </div>
 
       <!-- AUDIO -->
-      <section class="audio-wrap" aria-label="Audio player">
-        <p class="audio-title">Listen</p>
+      <!-- AUDIO -->
+<section class="audio-wrap" aria-label="Audio player">
+  <p class="audio-title">Listen</p>
 
-        <audio id="reflectionAudio" controls preload="metadata">
-          <source id="audioSource" src="" type="audio/mpeg" />
-          Your browser does not support the audio element.
-        </audio>
+  <!-- Player stays exactly as your container (plays one at a time, but can switch tracks) -->
+  <audio id="reflectionAudio" controls preload="metadata">
+    <!-- Keep this empty if you don't want to replace anything by default -->
+    <source id="audioSource" src="" type="audio/mpeg" />
+    Your browser does not support the audio element.
+  </audio>
 
-        <ul class="tracklist" id="trackList"></ul>
+  <!-- Tracklist (add as many as you want) -->
+  <ul class="tracklist" id="trackList">
+    <li class="track"
+        style="cursor:pointer;"
+        onclick="
+          const a=document.getElementById('reflectionAudio');
+          const s=document.getElementById('audioSource');
+          s.src='/reflections/pages/moral-choice/power-of-duality-podcast.mp3';
+          a.load();
+          a.play();
+        ">
+      ▶ Power of Duality (Podcast)
+    </li>
+  </ul>
 
-        <p class="note">Tip: If you update audio later, append <code>?v=2</code> to avoid cache.</p>
-      </section>
-
+  <p class="note">Tip: If you update audio later, append <code>?v=2</code> to avoid cache.</p>
+</section>
       <hr class="rule" />
 
       <p>Nothing in the material world appears by itself.</p>
