Update title from 'THE DIVINE PREMISE' to 'THE POWER OF DUALITY IN MORALITY'

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -235,7 +235,7 @@
         <div class="right">
           <h3>
             <a class="title-link" href="/reflections/pages/moral-choice/read.html" target="_blank" rel="noopener">
-              THE DIVINE PREMISE
+              THE POWER OF DUALITY IN MORALITY
             </a>
           </h3>
           <p>.Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
