Update header text for moral choice page

--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -235,7 +235,7 @@
   <!-- ✅ FIX 4: If header JS fails to load, show a minimal fallback header -->
   <noscript>
     <div style="position:fixed;top:0;left:0;right:0;z-index:9999;background:#201612;color:#f3e6dd;padding:12px 14px;border-bottom:1px solid rgba(255,255,255,.12)">
-      Solitude Reflections — The Moral Choice of Duality
+      Solitude Reflections — The Power of Duality in Morality
       <span style="float:right">
         <a href="/reflections/index.html" style="color:#ffb873;text-decoration:none">Home</a>
       </span>
@@ -250,7 +250,7 @@
            alt="Cover -- The Moral Choice of Duality"
            loading="lazy" />
 
-      <h1>THE MORAL CHOICE OF DUALITY</h1>
+      <h1>THE POWER OF DUALITY IN MORALITY</h1>
       <p class="subtitle">True goodness requires the capacity to do harm and the decision not to.</p>
 
       <div class="meta">
