Change track title from 'Moral choice' to 'Morality'

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -243,8 +243,8 @@
           <div class="playlist">
             <button class="track-link" type="button"
                     data-src="/reflections/pages/moral-choice/moralchoice.mp3"
-                    data-title="Moral choice">
-              ▶ Moral Choice
+                    data-title="Morality">
+              ▶ Morality
             </button>
 
             <button class="track-link" type="button"
