Integrate Cusdis comments section in read.html
Added comments section with Cusdis integration for user messages.

--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -541,6 +541,33 @@
         <small class="print-page-number" aria-hidden="true"></small>
       </div>
     </article>
+
+    <!-- COMMENTS (Cusdis) -->
+<section class="comments-wrap" aria-label="Comments">
+  <h3 style="margin:16px 0 10px;">Leave a message</h3>
+
+  <div id="cusdis_thread"
+    data-host="https://cusdis.com"
+    data-app-id="d14e9b16-d8b2-40ac-a7f6-e200b1ac61e8"
+    data-page-id=""
+    data-page-url=""
+    data-page-title=""
+  ></div>
+</section>
+
+<script>
+  // Fill page info automatically (works on any design)
+  (function () {
+    const el = document.getElementById("cusdis_thread");
+    if (!el) return;
+    el.setAttribute("data-page-id", location.pathname);
+    el.setAttribute("data-page-url", location.href);
+    el.setAttribute("data-page-title", document.title);
+  })();
+</script>
+
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+    
   </main>
 
   <script>
