Add stylesheet link to read.html

--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -22,7 +22,7 @@
 
   <!-- Theme color (mobile) -->
   <meta name="theme-color" content="#1f1815" />
-
+<link rel="stylesheet" href="/reflections/assets/reflections.css">
   <style>
     :root{
       --bg: #1f1815;
