--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -544,11 +544,12 @@
 
  <!-- COMMENTS (Cusdis) -->
 <section class="comments-wrap" aria-label="Comments">
-  <h3 style="margin:16px 0 10px;">Leave a message</h3>
+  <h3>Leave a message</h3>
 
   <div id="cusdis_thread"
     data-host="https://cusdis.com"
     data-app-id="d14e9b16-d8b2-40ac-a7f6-e200b1ac61e8"
+    data-theme="light"
     data-page-id=""
     data-page-url=""
     data-page-title=""
@@ -566,7 +567,25 @@
 </script>
 
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
-    
+
+<script>
+  // Force LIGHT theme inside the comment box (more reliable)
+  (function setCusdisTheme(){
+    function apply() {
+      if (window.CUSDIS && typeof window.CUSDIS.setTheme === "function") {
+        window.CUSDIS.setTheme("light");
+        return true;
+      }
+      return false;
+    }
+    if (apply()) return;
+    let tries = 0;
+    const t = setInterval(() => {
+      tries++;
+      if (apply() || tries > 40) clearInterval(t);
+    }, 150);
+  })();
+</script>
   </main>
 
   <script>
