Change comments section style to 'comments-card'

--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -532,7 +532,7 @@
     </div>
 
     <!-- COMMENTS (Cusdis) -->
-<section class="comments-wrap comments-dark" aria-label="Comments">
+<section class="comments-wrap comments-card" aria-label="Comments">
   <h3>Leave a message</h3>
 
   <div id="cusdis_thread"
