Improve page layout and spacing for comments section

--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -322,6 +322,61 @@
         content: counter(page);
       }
     }
+    /* ===== TIGHTER PAGE MARGINS (safe, minimal) ===== */
+main, .content, .container, .wrap {
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+}
+
+/* If your page uses a max-width wrapper */
+.container, .wrap, main {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ===== COMMENTS SECTION: reduce outer spacing ===== */
+.comments-wrap {
+  margin: 14px 0 !important;     /* less top/bottom gap */
+  padding: 12px !important;      /* less inner padding */
+  border-radius: 14px;           /* keep elegant look */
+}
+
+.comments-wrap h3 {
+  margin: 0 0 10px 0 !important; /* tighter title spacing */
+}
+
+/* ===== Cusdis iframe sizing + remove extra gaps ===== */
+#cusdis_thread {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+#cusdis_thread iframe {
+  width: 100% !important;
+  height: 70vh !important;       /* fixed comment window */
+  min-height: 520px;
+  max-height: 820px;
+  border: 0 !important;
+  display: block !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  background: transparent !important;
+}
+
+/* ===== OPTIONAL: even tighter on phones ===== */
+@media (max-width: 480px) {
+  main, .content, .container, .wrap {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
+  .comments-wrap {
+    padding: 10px !important;
+  }
+  #cusdis_thread iframe {
+    height: 72vh !important;
+    min-height: 480px;
+  }
+}
   </style>
 </head>
 
