Enhance styles for comments and Cusdis iframe
Added styles for comments card and Cusdis area.

--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -377,6 +377,34 @@ main, .content, .container, .wrap {
     min-height: 480px;
   }
 }
+    /* ===== COMMENTS: light background (not pure white) ===== */
+.comments-card{
+  background: #f3efe6 !important;            /* warm off-white */
+  border: 1px solid rgba(0,0,0,.10) !important;
+  box-shadow: 0 12px 30px rgba(0,0,0,.18) !important;
+  color: #1f1815 !important;                 /* readable dark text */
+  color-scheme: light;                       /* helps iOS form styling */
+}
+
+/* tighten a bit too (optional) */
+.comments-card{
+  padding: 12px !important;
+  margin: 14px 0 !important;
+  border-radius: 16px !important;
+}
+
+/* ===== Cusdis area (iframe wrapper + iframe background) ===== */
+#cusdis_thread{
+  background: transparent !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+#cusdis_thread iframe{
+  background: #fbf8f1 !important;            /* lighter paper */
+  border-radius: 12px !important;
+  border: 1px solid rgba(0,0,0,.08) !important;
+}
   </style>
 </head>
 
