Change background color to light theme

--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="/reflections/assets/reflections.css">
   <style>
     :root{
-      --bg: #1f1815;
+      --bg: #FFF5EE;
       --panel: rgba(255,255,255,.04);
       --ink: #f3e6dd;
       --muted: rgba(243,230,221,.72);
