--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -30,7 +30,7 @@
       --ink: #f3e6dd;
       --muted: rgba(243,230,221,.72);
       --line: rgba(255,255,255,.10);
-      --accent: #ff6b3d;
+      --accent: #1f1815;
       --gold: #ffb873;
       --shadow: 0 18px 55px rgba(0,0,0,.45);
       --radius: 18px;
@@ -388,8 +388,8 @@ main, .content, .container, .wrap {
 
 /* tighten a bit too (optional) */
 .comments-card{
-  padding: 12px !important;
-  margin: 14px 0 !important;
+  padding: 10px !important;
+  margin: 12px 0 !important;
   border-radius: 16px !important;
 }
 
