Enhance comments section with new styles
Added styles for the comments section frame and inner border.

--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -395,6 +395,41 @@
       margin-left:0.75rem;
       flex-shrink:0;
     }
+    /* ===== COMMENT SECTION FRAME / BORDER ===== */
+.comments-wrap.comments-card{
+  /* frame */
+  border: 1px solid rgba(31,24,21,.22) !important;
+  border-radius: 18px !important;
+
+  /* light paper (not pure white) */
+  background: #f5f1e8 !important;
+
+  /* space */
+  padding: 14px !important;
+  margin: 18px 0 !important;
+
+  /* depth */
+  box-shadow:
+    0 10px 25px rgba(0,0,0,.10),
+    inset 0 1px 0 rgba(255,255,255,.65) !important;
+
+  position: relative;
+}
+
+/* inner “frame line” for a classy look */
+.comments-wrap.comments-card::before{
+  content:"";
+  position:absolute;
+  inset: 10px;
+  border-radius: 14px;
+  border: 1px solid rgba(0,0,0,.08);
+  pointer-events:none;
+}
+
+/* optional: keep the Cusdis area clean inside the frame */
+#cusdis_thread{
+  margin-top: 8px;
+}
   </style>
 
   <!-- Service Worker -->
