--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -19,418 +19,413 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+<style>
+  /* =========================
+     GLOBAL FIXED HEADER
+  ========================== */
+  .ref-header{
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    z-index: 1000;
+    background: #1f1815;
+    border-bottom: 2px solid rgba(255,255,255,0.06);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.35);
+  }
 
-  <style>
-    /* =========================
-       GLOBAL FIXED HEADER
-    ========================== */
-    .ref-header{
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      z-index: 1000;
-      background: #1f1815;
-      border-bottom: 2px solid rgba(255,255,255,0.06);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.35);
-    }
+  .ref-header-inner{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0.8rem 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 
+  /* Left cluster */
+  .ref-header-left{
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+    gap:0.35rem;
+    flex-shrink:0;
+  }
+
+  .brand-link{
+    display:flex;
+    align-items:center;
+    gap:0.55rem;
+    text-decoration:none;
+  }
+
+  .brand-logo{
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    object-fit:cover;
+    box-shadow:0 0 8px rgba(0,0,0,0.6);
+    flex-shrink:0;
+  }
+
+  .brand-text{
+    display:flex;
+    flex-direction:column;
+    line-height:1.1;
+  }
+
+  .brand-title{
+    font-size:0.9rem;
+    font-weight:600;
+    letter-spacing:0.04em;
+    text-transform:uppercase;
+    color:#ffffff;
+  }
+
+  .brand-subtitle{
+    font-size:0.7rem;
+    color:#f0e0d0;
+    opacity:0.8;
+  }
+
+  /* Under-logo actions */
+  .header-actions{
+    display:flex;
+    align-items:center;
+    gap:0.5rem;
+  }
+
+  /* Hamburger button (visible on desktop + mobile) */
+  .nav-toggle{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+
+    border: 1px solid rgba(255,255,255,0.18);
+    background: rgba(255,255,255,0.06);
+    border-radius:999px;
+    padding: 0.25rem 0.6rem;
+    font-size: 1rem;
+    color: #e8d9c5;
+    cursor: pointer;
+    transition: background 0.2s ease, border-color 0.2s ease, transform 0.15s ease;
+  }
+
+  .ref-header.nav-open .nav-toggle{
+    background: rgba(255,107,61,0.12);
+    border-color: rgba(255,107,61,0.45);
+    transform: translateY(0.2px);
+  }
+
+  /* Local buttons */
+  .nav-buttons{
+    display:flex;
+    gap:0.4rem;
+    flex-wrap:wrap;
+  }
+
+  .nav-buttons button{
+    background:#26201c;
+    color:#fff;
+    border:1px solid rgba(255,255,255,0.2);
+    padding:4px 10px;
+    border-radius:999px;
+    font-size:0.75rem;
+    cursor:pointer;
+    white-space:nowrap;
+  }
+
+  .nav-buttons button:hover{
+    background:#ff6b3d;
+    border-color:#ff6b3d;
+    color:#1f1815;
+  }
+
+  /* =========================
+     DESKTOP NAV (INLINE LINKS)
+  ========================== */
+  .ref-nav{
+    flex: 1;
+    min-width: 0;
+  }
+
+  .ref-nav ul{
+    display:flex;
+    gap:0.75rem;
+    list-style:none;
+    padding:0;
+    margin:0;
+    flex-wrap:wrap;
+    align-items:center;
+  }
+
+  .ref-nav a{
+    display:inline-flex;
+    align-items:center;
+    padding:0.35rem 0.7rem;
+    border-radius:999px;
+    font-size:0.8rem;
+    text-decoration:none;
+    color:#f3e4d5;
+    border:1px solid transparent;
+    white-space:nowrap;
+    transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+  }
+
+  .ref-nav a:hover{
+    background: rgba(255,107,61,0.14);
+    border-color: rgba(255,107,61,0.4);
+  }
+
+  .ref-nav a.active{
+    background:#fca286;
+    color:#592f1d;
+    border-color:#ff6b3d;
+    font-weight:600;
+  }
+
+  /* Right side badge */
+  .ref-header-right{
+    display:flex;
+    align-items:center;
+    gap:0.75rem;
+    flex-shrink:0;
+  }
+
+  .current-page-badge{
+    display:inline-flex;
+    align-items:center;
+    gap:0.4rem;
+    padding:0.3rem 0.7rem;
+    border-radius:999px;
+    background: rgba(255,255,255,0.05);
+    border:1px solid rgba(255,255,255,0.15);
+    font-size:0.75rem;
+    color:#f7e9dd;
+    white-space:nowrap;
+  }
+
+  .page-icon{
+    font-size:0.85rem;
+    color:#ffb347;
+  }
+
+  /* Main layout */
+  .page-content{
+    max-width:1100px;
+    margin:0 auto;
+    padding: 6.6rem 1rem 2rem;
+  }
+
+  /* Overlay (clickable to close menu) */
+  .nav-overlay{
+    position:fixed;
+    inset:0;
+    background: rgba(0,0,0,0.20);
+    z-index: 500;
+    opacity:0;
+    pointer-events:none;
+    transition: opacity 0.25s ease;
+  }
+
+  .ref-header.nav-open .nav-overlay{
+    opacity:0.6;
+    pointer-events:auto;
+  }
+
+  /* =========================
+     RESPONSIVE
+  ========================== */
+  @media (max-width: 900px){
+    .brand-subtitle{ display:none; }
+    .current-page-badge{ display:none; }
+    .ref-nav a{ padding:0.25rem 0.55rem; font-size:0.75rem; }
+  }
+
+  @media (max-width: 768px){
     .ref-header-inner{
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 0.8rem 1rem;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    /* Left cluster */
-    .ref-header-left{
-      display:flex;
-      flex-direction:column;
+      flex-wrap:nowrap;
       align-items:flex-start;
-      gap:0.35rem;
-      flex-shrink:0;
     }
 
-    .brand-link{
-      display:flex;
-      align-items:center;
-      gap:0.55rem;
-      text-decoration:none;
-    }
-
-    .brand-logo{
-      width:40px;
-      height:40px;
-      border-radius:50%;
-      object-fit:cover;
-      box-shadow:0 0 8px rgba(0,0,0,0.6);
-      flex-shrink:0;
-    }
-
-    .brand-text{
-      display:flex;
-      flex-direction:column;
-      line-height:1.1;
-    }
-
-    .brand-title{
-      font-size:0.9rem;
-      font-weight:600;
-      letter-spacing:0.04em;
-      text-transform:uppercase;
-      color:#ffffff;
-    }
-
-    .brand-subtitle{
-      font-size:0.7rem;
-      color:#f0e0d0;
-      opacity:0.8;
-    }
-
-    /* Under-logo actions */
-    .header-actions{
-      display:flex;
-      align-items:center;
-      gap:0.5rem;
-    }
-
-    /* Hamburger button (visible on desktop + mobile) */
-    .nav-toggle{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.06);
-      border-radius:999px;
-      padding: 0.25rem 0.6rem;
-      font-size: 1rem;
-      color: #e8d9c5;
-      cursor: pointer;
-      transition: background 0.2s ease, border-color 0.2s ease, transform 0.15s ease;
-    }
-
-    .ref-header.nav-open .nav-toggle{
-      background: rgba(255,107,61,0.12);
-      border-color: rgba(255,107,61,0.45);
-      transform: translateY(0.2px);
-    }
-
-    /* Local buttons */
-    .nav-buttons{
-      display:flex;
-      gap:0.4rem;
-      flex-wrap:wrap;
-    }
-
-    .nav-buttons button{
-      background:#26201c;
-      color:#fff;
-      border:1px solid rgba(255,255,255,0.2);
-      padding:4px 10px;
-      border-radius:999px;
-      font-size:0.75rem;
-      cursor:pointer;
-      white-space:nowrap;
-    }
-
-    .nav-buttons button:hover{
-      background:#ff6b3d;
-      border-color:#ff6b3d;
-      color:#1f1815;
-    }
-
-    /* =========================
-       DESKTOP NAV (INLINE LINKS)
-    ========================== */
+    /* MOBILE dropdown panel */
     .ref-nav{
-      flex: 1;
-      min-width: 0;
+      position: fixed;
+      top: 64px;
+      left: 0;
+      right: 0;
+      background: rgba(31,24,21,0.96);
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.25s ease;
+      z-index: 900;
+      padding: 0;
     }
 
     .ref-nav ul{
-      display:flex;
-      gap:0.75rem;
-      list-style:none;
-      padding:0;
-      margin:0;
-      flex-wrap:wrap;
-      align-items:center;
+      flex-direction: column;
+      padding: 0.15rem 1rem 1rem;
+      gap: 0.35rem;
+      flex-wrap: nowrap;
+      align-items: stretch;
     }
 
     .ref-nav a{
-      display:inline-flex;
-      align-items:center;
-      padding:0.35rem 0.7rem;
-      border-radius:999px;
-      font-size:0.8rem;
-      text-decoration:none;
-      color:#f3e4d5;
-      border:1px solid transparent;
-      white-space:nowrap;
-      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+      width:100%;
+      justify-content:flex-start;
+      white-space: normal;
     }
 
-    .ref-nav a:hover{
-      background: rgba(255,107,61,0.14);
-      border-color: rgba(255,107,61,0.4);
+    /* OPEN STATE */
+    .ref-header.nav-open .ref-nav{
+      max-height: calc(100vh - 64px);
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
-    .ref-nav a.active{
-      background:#fca286;
-      color:#592f1d;
-      border-color:#ff6b3d;
-      font-weight:600;
-    }
-
-    /* Right side badge */
-    .ref-header-right{
-      display:flex;
-      align-items:center;
-      gap:0.75rem;
-      flex-shrink:0;
-    }
-
-    .current-page-badge{
-      display:inline-flex;
-      align-items:center;
-      gap:0.4rem;
-      padding:0.3rem 0.7rem;
-      border-radius:999px;
-      background: rgba(255,255,255,0.05);
-      border:1px solid rgba(255,255,255,0.15);
-      font-size:0.75rem;
-      color:#f7e9dd;
-      white-space:nowrap;
-    }
-
-    .page-icon{
-      font-size:0.85rem;
-      color:#ffb347;
-    }
-
-    /* Main layout */
     .page-content{
-      max-width:1100px;
-      margin:0 auto;
-      padding: 6.6rem 1rem 2rem;
+      padding-top: 7.6rem;
     }
+  }
 
-    /* Overlay (clickable to close menu) */
-    .nav-overlay{
-      position:fixed;
-      inset:0;
-      background: rgba(0,0,0,0.20);
-      z-index: 500;
-      opacity:0;
-      pointer-events:none;
-      transition: opacity 0.25s ease;
-    }
+  /* =========================
+     PAGE-SPECIFIC STYLES
+  ========================== */
+  .content{
+    padding:0 0 2rem 0;
+    max-width:800px;
+    margin-left:auto;
+    margin-right:auto;
+    line-height:1.65;
+    font-size:17px;
+    overflow: visible; /* allow the hand-drawn border to show */
+  }
 
-    .ref-header.nav-open .nav-overlay{
-      opacity:0.6;
-      pointer-events:auto;
-    }
+  .scrolling-subtitle{
+    width:100%;
+    overflow:hidden;
+    white-space:nowrap;
+    position:relative;
+    margin-top:6px;
+    color:#444;
+    font-size:14px;
+  }
 
-    /* =========================
-       RESPONSIVE
-    ========================== */
-    @media (max-width: 900px){
-      .brand-subtitle{ display:none; }
-      .current-page-badge{ display:none; }
-      .ref-nav a{ padding:0.25rem 0.55rem; font-size:0.75rem; }
-    }
+  .scrolling-subtitle span{
+    display:inline-block;
+    animation:smoothScroll 18s linear infinite;
+  }
 
-    @media (max-width: 768px){
-      .ref-header-inner{
-        flex-wrap:nowrap;
-        align-items:flex-start;
-      }
+  @keyframes smoothScroll{
+    0%{ transform: translateX(100%); }
+    30%{ transform: translateX(0); }
+    100%{ transform: translateX(-100%); }
+  }
 
-      /* MOBILE dropdown panel */
-      .ref-nav{
-        position: fixed;
-        top: 64px;
-        left: 0;
-        right: 0;
-        background: rgba(31,24,21,0.96);
-        border-bottom: 1px solid rgba(255,255,255,0.08);
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.25s ease;
-        z-index: 900;
-        padding: 0;
-      }
+  /* =========================
+     AUDIO PLAYLIST (tighter)
+  ========================== */
+  .audio-wrap{
+    max-width:800px;
+    margin:1.2rem auto 1.2rem auto;
+    padding:0.85rem 0.75rem;
+    border-radius:16px;
+    background:#261a15;
+    border:3px solid rgba(101,55,14,1);
+  }
 
-      .ref-nav ul{
-        flex-direction: column;
-        padding: 0.15rem 1rem 1rem;
-        gap: 0.35rem;
-        flex-wrap: nowrap;
-        align-items: stretch;
-      }
+  #reflectionAudio{
+    width:100%;
+    display:block;
+  }
 
-      .ref-nav a{
-        width:100%;
-        justify-content:flex-start;
-        white-space: normal;
-      }
+  .playlist{
+    margin-top:0.9rem;
+    display:flex;
+    flex-direction:column;
+    gap:0.4rem;
+  }
 
-      /* OPEN STATE */
-      .ref-header.nav-open .ref-nav{
-        max-height: calc(100vh - 64px);
-        overflow-y: auto;
-        -webkit-overflow-scrolling: touch;
-      }
+  .playlist-row{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:0.55rem 0.55rem;
+    background:#261a15;
+    border-radius:8px;
+    cursor:pointer;
+    border:1.5px solid #120d09;
+    transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+  }
 
-      .page-content{
-        padding-top: 7.6rem;
-      }
-    }
+  .playlist-row:hover{ border-color:#42251c; }
 
-    /* =========================
-       PAGE-SPECIFIC STYLES
-    ========================== */
-    .content{
-      padding:0 0 2rem 0;
-      max-width:800px;
-      margin-left:auto;
-      margin-right:auto;
-      line-height:1.65;
-      font-size:17px;
-    }
+  .playlist-row.active{
+    background:#170d09;
+    border-color:#997060;
+    box-shadow:0 0 2px rgba(255,0,0,0.4);
+  }
 
-    .scrolling-subtitle{
-      width:100%;
-      overflow:hidden;
-      white-space:nowrap;
-      position:relative;
-      margin-top:6px;
-      color:#444;
-      font-size:14px;
-    }
+  .playlist-main{
+    display:flex;
+    flex-direction:column;
+    gap:0rem;
+    overflow:hidden;
+  }
 
-    .scrolling-subtitle span{
-      display:inline-block;
-      animation:smoothScroll 18s linear infinite;
-    }
+  .playlist-title{
+    font-size:0.96rem;
+    font-weight:600;
+    color:#f3e6dd;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
 
-    @keyframes smoothScroll{
-      0%{ transform: translateX(100%); }
-      30%{ transform: translateX(0); }
-      100%{ transform: translateX(-100%); }
-    }
+  .playlist-sub{
+    font-size:0.78rem;
+    color:#b29587;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
 
-    /* =========================
-       AUDIO PLAYLIST (tighter)
-    ========================== */
-    .audio-wrap{
-      max-width:800px;
-      margin:1.2rem auto 1.2rem auto;
-      padding:0.85rem 0.75rem;
-      border-radius:16px;
-      background:#261a15;
-      border:3px solid rgba(101,55,14,1);
-    }
+  .playlist-duration{
+    font-size:0.82rem;
+    color:#c9b0a4;
+    margin-left:0.75rem;
+    flex-shrink:0;
+  }
 
-    #reflectionAudio{
-      width:100%;
-      display:block;
-    }
+  /* =========================
+     COMMENTS: HAND-DRAWN FRAME (single clean version)
+  ========================== */
+  .comments-wrap.comments-card{
+    position: relative !important;
+    background: #f6f1e7 !important;     /* light but not pure white */
+    border-radius: 18px !important;
+    padding: 22px 16px !important;     /* space INSIDE the frame */
+    margin: 18px 0 !important;
+    overflow: visible !important;
+  }
 
-    .playlist{
-      margin-top:0.9rem;
-      display:flex;
-      flex-direction:column;
-      gap:0.4rem;
-    }
+  /* sketch border layer */
+  .comments-wrap.comments-card::before{
+    content:"";
+    position:absolute;
+    inset: -12px;                      /* border sits outside */
+    pointer-events:none;
+    background-repeat:no-repeat;
+    background-size: 100% 100%;
+    opacity: .95;
 
-    .playlist-row{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:0.55rem 0.55rem;
-      background:#261a15;
-      border-radius:8px;
-      cursor:pointer;
-      border:1.5px solid #120d09;
-      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
-    }
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='800'%20height='520'%20viewBox='0%200%20800%20520'%3E%3Cdefs%3E%3Cfilter%20id='rough'%20x='-10%25'%20y='-10%25'%20width='120%25'%20height='120%25'%3E%3CfeTurbulence%20type='fractalNoise'%20baseFrequency='0.9'%20numOctaves='2'%20seed='2'/%3E%3CfeDisplacementMap%20in='SourceGraphic'%20scale='6'/%3E%3C/filter%3E%3C/defs%3E%3Crect%20x='18'%20y='18'%20width='764'%20height='484'%20rx='26'%20ry='26'%20fill='none'%20stroke='%23000'%20stroke-width='10'%20stroke-linecap='round'%20stroke-linejoin='round'%20filter='url(%23rough)'/%3E%3C/svg%3E");
+  }
 
-    .playlist-row:hover{ border-color:#42251c; }
-
-    .playlist-row.active{
-      background:#170d09;
-      border-color:#997060;
-      box-shadow:0 0 2px rgba(255,0,0,0.4);
-    }
-
-    .playlist-main{
-      display:flex;
-      flex-direction:column;
-      gap:0rem;
-      overflow:hidden;
-    }
-
-    .playlist-title{
-      font-size:0.96rem;
-      font-weight:600;
-      color:#f3e6dd;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .playlist-sub{
-      font-size:0.78rem;
-      color:#b29587;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .playlist-duration{
-      font-size:0.82rem;
-      color:#c9b0a4;
-      margin-left:0.75rem;
-      flex-shrink:0;
-    }
-    /* ===== COMMENT SECTION FRAME / BORDER ===== */
-.comments-wrap.comments-card{
-  /* frame */
-  border: 2px solid rgba(31,24,21,.28) !important;
-  border-radius: 18px !important;
-
-  /* light paper (not pure white) */
-  background: #f5f1e8 !important;
-
-  /* space */
-  padding: 14px !important;
-  margin: 18px 0 !important;
-
-  /* depth */
-  box-shadow:
-    0 10px 25px rgba(0,0,0,.10),
-    inset 0 1px 0 rgba(255,255,255,.65) !important;
-
-  position: relative;
-}
-
-/* inner “frame line” for a classy look */
-.comments-wrap.comments-card::before{
-  content:"";
-  position:absolute;
-  inset: 10px;
-  border-radius: 14px;
-  border: 1px solid rgba(0,0,0,.08);
-  pointer-events:none;
-}
-
-/* optional: keep the Cusdis area clean inside the frame */
-#cusdis_thread{
-  margin-top: 8px;
-}
-  </style>
+  /* keep Cusdis area nicely inside */
+  #cusdis_thread{
+    margin-top: 10px !important;
+  }
+</style>
 
   <!-- Service Worker -->
   <script>
