--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -627,6 +627,51 @@
       <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
     </footer>
   </main>
+    <div class="ref-divider">------ ❖ ------</div>
+      <!-- COMMENTS (Cusdis) -->
+<section class="comments-wrap" aria-label="Comments">
+  <h3>Leave a message</h3>
+
+  <div id="cusdis_thread"
+    data-host="https://cusdis.com"
+    data-app-id="d14e9b16-d8b2-40ac-a7f6-e200b1ac61e8"
+    data-theme="light"
+    data-page-id=""
+    data-page-url=""
+    data-page-title=""
+  ></div>
+</section>
+
+<script>
+  (function () {
+    const el = document.getElementById("cusdis_thread");
+    if (!el) return;
+    el.setAttribute("data-page-id", location.pathname);
+    el.setAttribute("data-page-url", location.href);
+    el.setAttribute("data-page-title", document.title);
+  })();
+</script>
+
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+
+<script>
+  // Force LIGHT theme inside the comment box (more reliable)
+  (function setCusdisTheme(){
+    function apply() {
+      if (window.CUSDIS && typeof window.CUSDIS.setTheme === "function") {
+        window.CUSDIS.setTheme("light");
+        return true;
+      }
+      return false;
+    }
+    if (apply()) return;
+    let tries = 0;
+    const t = setInterval(() => {
+      tries++;
+      if (apply() || tries > 40) clearInterval(t);
+    }, 150);
+  })();
+</script>
 
   <!-- Autoplay logic (back-button part removed; header handles navigation now) -->
   <script>
