--- a/reflections/index.html
+++ b/reflections/index.html
@@ -7,7 +7,8 @@
   <title>Solitude Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
   <link rel="icon" href="/reflections/assets/favicon.ico">
-
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/">
+  <meta name="robots" content="index,follow">
   <!-- Social preview (keep as-is) -->
   <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
   <meta property="og:image:width" content="240">
