--- a/index.html
+++ b/index.html
@@ -183,58 +183,50 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
 
   <main class="main">
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
-      <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+  <!-- ✅ QUICK LINKS (Order + Reflections) -->
+<section class="quick-links" aria-label="Quick links">
+  <div class="quick-links-inner">
+    <a href="/order/" class="btn btn-primary quick-btn">Order Now</a>
+    <a href="/reflections/" class="btn btn-secondary quick-btn">Reflections</a>
+  </div>
+</section>
 
-        <!-- ADDED: data-critical on the very first hero image (loads immediately) -->
-        <div class="carousel-item active">
-          <img src="assets/IMG_0111.jpeg" alt="" data-critical>
-          <div class="carousel-container">
-            <h3><span></span></h3>
-            <p>we will help you make lasting memories and to make it worth your time and taste..</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">Your Order</a>
-            </div>
-          </div>
-        </div>
+<style>
+  /* ===== Quick Links layout (keeps your design if .btn styles already exist) ===== */
+  .quick-links{ padding: 0; margin: 0; }
+  .quick-links-inner{
+    display:flex;
+    gap:12px;
+    flex-wrap:wrap;
+    align-items:center;
+  }
 
-        <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
-          <div class="carousel-container">
-            <h2>relax and enjoy your moment.</h2>
-            <p>theres always a place for good food and warm hospitality.</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">ORDER HERE</a>
-            </div>
-          </div>
-        </div><!-- End Carousel Item -->
+  /* ===== Fallback button styling (only if your site has NO .btn styles) ===== */
+  .btn.quick-btn{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    padding:12px 18px;
+    border-radius:12px;
+    text-decoration:none;
+    font-weight:800;
+    letter-spacing:.2px;
+    border:1px solid rgba(255,255,255,0.14);
+    box-shadow:0 10px 22px rgba(0,0,0,0.18);
+    transition: transform .12s ease, box-shadow .12s ease, opacity .12s ease;
+  }
+  .btn.quick-btn:hover{ transform: translateY(-1px); box-shadow:0 14px 26px rgba(0,0,0,0.22); }
+  .btn.quick-btn:active{ transform: translateY(0px); opacity:.92; }
 
-        <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
-          <div class="carousel-container">
-            <h4>Great for reunions and Corporate events</h4>
-            <p>genuine hospitality makes each visit worthwhile.</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">Order Here</a>
-            </div>
-          </div>
-        </div><!-- End Carousel Item -->
-
-        <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
-
-        <ol class="carousel-indicators"></ol>
-      </div>
-    </section><!-- /Hero Section -->
-
+  /* If your site already defines .btn/.btn-primary, those will override these */
+  .btn-primary.quick-btn{ background:#1f1815; color:#fff; }
+  .btn-secondary.quick-btn{
+    background: linear-gradient(135deg,#2a1b15,#3a241d);
+    color:#ffd9b3;
+    border-color: rgba(255,170,100,0.25);
+  }
+</style>
+  
     <audio id="bg-music" loop>
       <source src="assets/stonegrill_bgm_web.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
