--- a/index.html
+++ b/index.html
@@ -182,58 +182,61 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
   </header>
 
   <main class="main">
-    <!-- Hero Section -->
-   <section id="hero" class="hero section dark-background">
-      <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+  <section id="hero" class="hero section dark-background">
+  <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-        <!-- ADDED: data-critical on the very first hero image (loads immediately) -->
-        <div class="carousel-item active">
-          <img src="assets/IMG_0111.jpeg" alt="" data-critical>
-          <div class="carousel-container">
-            <h3><span></span></h3>
-            <p>we will help you make lasting memories and to make it worth your time and taste..</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">Your Order</a>
-            </div>
-          </div>
+    <!-- ADDED: data-critical on the very first hero image (loads immediately) -->
+    <div class="carousel-item active">
+      <img src="assets/IMG_0111.jpeg" alt="" data-critical>
+      <div class="carousel-container">
+        <h3><span></span></h3>
+        <p>we will help you make lasting memories and to make it worth your time and taste..</p>
+        <div>
+          <a href="#menu" class="btn-get-started">Our Menu</a>
+          <a href="https://stonegrillresto.net/order" class="btn-get-started">Your Order</a>
+          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
         </div>
-
-        <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
-          <div class="carousel-container">
-            <h2>relax and enjoy your moment.</h2>
-            <p>theres always a place for good food and warm hospitality.</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">ORDER HERE</a>
-            </div>
-          </div>
-        </div><!-- End Carousel Item -->
-
-        <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
-          <div class="carousel-container">
-            <h4>Great for reunions and Corporate events</h4>
-            <p>genuine hospitality makes each visit worthwhile.</p>
-            <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://stonegrillresto.net/order" class="btn-get-started">Order Here</a>
-            </div>
-          </div>
-        </div><!-- End Carousel Item -->
-
-        <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
-
-        <ol class="carousel-indicators"></ol>
       </div>
-    </section><!-- /Hero Section -->
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+      <div class="carousel-container">
+        <h2>relax and enjoy your moment.</h2>
+        <p>theres always a place for good food and warm hospitality.</p>
+        <div>
+          <a href="#menu" class="btn-get-started">Our Menu</a>
+          <a href="https://stonegrillresto.net/order" class="btn-get-started">ORDER HERE</a>
+          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
+        </div>
+      </div>
+    </div><!-- End Carousel Item -->
+
+    <div class="carousel-item">
+      <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
+      <div class="carousel-container">
+        <h4>Great for reunions and Corporate events</h4>
+        <p>genuine hospitality makes each visit worthwhile.</p>
+        <div>
+          <a href="#menu" class="btn-get-started">Our Menu</a>
+          <a href="https://stonegrillresto.net/order" class="btn-get-started">Order Here</a>
+          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
+        </div>
+      </div>
+    </div><!-- End Carousel Item -->
+
+    <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+    </a>
+
+    <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+    </a>
+
+    <ol class="carousel-indicators"></ol>
+  </div>
+</section><!-- /Hero Section -->
+
   
     <audio id="bg-music" loop>
       <source src="assets/stonegrill_bgm_web.mp3" type="audio/mpeg">
