--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
   <!-- CSS Files (kept) -->
   <!-- ADDED: preload main.css for faster first paint -->
-  <link rel="preload" as="style" href="assets/css/main.css">
+  <link rel="preload" as="style" href="assets/css/main.css?v=2">
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -194,7 +195,8 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
         <div>
           <a href="#menu" class="btn-get-started">Our Menu</a>
           <a href="https://stonegrillresto.net/order" class="btn-get-started">Your Order</a>
-          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
+          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started btn-reflections">Reflections</a>
+
         </div>
       </div>
     </div>
@@ -207,7 +209,8 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
         <div>
           <a href="#menu" class="btn-get-started">Our Menu</a>
           <a href="https://stonegrillresto.net/order" class="btn-get-started">ORDER HERE</a>
-          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
+         <a href="https://stonegrillresto.net/reflections/" class="btn-get-started btn-reflections">Reflections</a>
+
         </div>
       </div>
     </div><!-- End Carousel Item -->
@@ -220,7 +223,8 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
         <div>
           <a href="#menu" class="btn-get-started">Our Menu</a>
           <a href="https://stonegrillresto.net/order" class="btn-get-started">Order Here</a>
-          <a href="https://stonegrillresto.net/reflections/" class="btn-get-started">Reflections</a>
+         <a href="https://stonegrillresto.net/reflections/" class="btn-get-started btn-reflections">Reflections</a>
+
         </div>
       </div>
     </div><!-- End Carousel Item -->
