--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1073,7 +1073,7 @@
 
  <!-- FOOTER -->
 <footer class="site-footer">
-  © 2025  <a href="https://stonegrillresto.net/">go to honepage</a>
+  © 2025  © <a href="https://stonegrillresto.net/">Homepage</a> or 
   <a href="tel:0535680539">Call 053 568 0539</a>
 </footer>
 
