--- a/reflections/index.html
+++ b/reflections/index.html
@@ -32,8 +32,7 @@
     <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
     <h1>SOLITUDE</h1>
     <p class="tag">
-      These thoughts are personal reflections — not doctrine, not instruction, not authority.
-      If there is one sacred sentence here, it is simply: “I do not know — but I am listening”
+      a humble space for honest questions—reflections that welcome doubt, explore faith and meaning, and share quiet realizations without claiming certainty.
     </p>
   </header>
 
