--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="A reflection that challenges the idea of a human-shaped God and invites the reader toward inner awakening.">
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-god-we-created/thegodwecreate.png">
   <link rel="icon" href="/reflections/assets/favicon.ico">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html">
 
   <!-- Social preview (keep as-is) -->
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/thegodwecreated.png">
