--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
-
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/mirror-of-worship/read.html">
   <!-- CSS Files (kept) -->
   <!-- ADDED: preload main.css for faster first paint -->
   <link rel="preload" as="style" href="assets/css/main.css?v=2">
