--- a/reflections/pages/belief/read.html
+++ b/reflections/pages/belief/read.html
@@ -19,7 +19,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/belief/read.html">
   <style>
     /* =========================
        GLOBAL FIXED HEADER
