--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -23,6 +23,7 @@
   <!-- Theme color (mobile) -->
   <meta name="theme-color" content="#1f1815" />
 <link rel="stylesheet" href="/reflections/assets/reflections.css">
+ <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/godevil/read.html">
   <style>
     :root{
       --bg: #1f1815;
