--- a/reflections/pages/initial-premise/read.html
+++ b/reflections/pages/initial-premise/read.html
@@ -18,6 +18,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/initial-premise/read.html">
 
   <style>
     /* =========================
