--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Oneness & Duality -- Ninox Antolihao</title>
 <link rel="icon" href="/reflections/assets/favicon.ico">
+ <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/oneness-duality/read.html">
 <style>
 .back-button {
   text-align: center;
