--- a/reflections/pages/question-label-sinner/read.html
+++ b/reflections/pages/question-label-sinner/read.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html">
     <title>When Seeking Assurance is Labeled as Sin</title>
 
     <style>
