--- a/reflections/pages/the-inner-listener/read.html
+++ b/reflections/pages/the-inner-listener/read.html
@@ -19,6 +19,7 @@
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
   <link rel="icon" href="/reflections/assets/favicon.ico">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
   <style>
     /* =========================
        GLOBAL FIXED HEADER
