--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -18,6 +18,7 @@
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html">
 
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
