--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -19,6 +19,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
 <style>
   /* =========================
      GLOBAL FIXED HEADER
