--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -18,7 +18,7 @@
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
-
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/diety/read.html">
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
