--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -18,7 +18,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html">
   <style>
     /* =========================
        GLOBAL FIXED HEADER
