--- a/reflections/pages/silent-influence/read.html
+++ b/reflections/pages/silent-influence/read.html
@@ -8,7 +8,7 @@
 
   <!-- Site Styles -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
-
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/silent-influence/read.html">
   <!-- Open Graph (Facebook, Messenger) -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="Silent Influence — Ninox Antolihao">
