--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -18,6 +18,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/ref-header.css">
+   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <style>
     /* =========================
